# cps_distributed_bank_transaction_monitor

./: .gitignore  Cargo.toml
.cargo/: config.toml
disgrams/: Cargo.toml
disgrams/src/: crypto.rs  datagram.rs  errors.rs  lib.rs  transaction.rs
document/: cps-assignment-ru.typ  cps-assignment.typ  seton-notes-export.md
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  user-data.yaml.tftpl  variables.tf  versions.tf
persistance/: dashboard.service  receiver.service  sender.service
python_stuff/: cps-bank-dashboard.py
receiver/: Cargo.toml
receiver/src/: config.rs  db.rs  main.rs
sender/: Cargo.toml
sender/src/: config.rs  main.rs  sequence_counter.rs  transaction_generator.rs
tran_c/: Cargo.toml
